app/assets/stylesheets/redesign/_header.css.scss
.nav-menu {
  text-transform: uppercase;
  font-size: 1.4rem;
}

.all-dresses {
  padding: 0;
  margin-left: 15px;
  &.col-md-4 { padding-top: 0;}

  .btn{
    font-family: $font-family-secondary;
    width: 377px;
    padding-left: 0;
    padding-right: 0;
  }
}

.menu-main-promotions {
  font-size: 1.6rem;
  margin-top: 10px;
}

.mega-menu-list {
  padding-top: 10px;
  padding-bottom: 5px;
  font-family: $font-family-secondary;
  font-size: 1.6rem;
}

.mega-menu--secondary {
  background-color: #fff;
  padding-top: 15px;
  padding-bottom: 15px;
  border-bottom:3px solid $gray-light-bg;
}

.link-header {
  font-size: 1.5rem;
}

.mega-menu-list--item a {
  text-transform: capitalize;
  font-weight: 400;

  &:hover {
    color: #355e6d !important;
  }
}

.mega-menu--main {
  position: relative;
  border: 1px solid #040505;
  border-bottom: none;
  border-left: none;
  border-right: none;
  background-color: #f5f5f5;
  padding-right: 0;
  padding-left: 0;
  height: 100px;
}

.mega-menu-banner {
  position: absolute;
  left: 17px;
  top: 130px;
  width: 25%;
  display: block;
  color: #fff;

  img {
    width: 100%;
  }
}

.stories {
  position: relative;
  border: 1px solid #040505;
  border-bottom: none;
  border-left: none;
  border-right: none;
  background-color: #f5f5f5;
  padding-right: 0;
  padding-left: 0;
}

.account {
  position: absolute;
  top: 0;
  border: 1px solid #040505;
  background-color: white;
  padding-right: 0;
  padding-left: 0;
  line-height: 35px;
}

.search-bar {
  border: 1px solid #040505;
  border-bottom: none;
  border-left: none;
  border-right: none;
}

.mega-menu--main:after, .mega-menu--main:before {
  bottom: 100%;
  left: 338px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.stories:after, .stories:before {
  bottom: 100%;
  left: 418px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.account:after, .account:before {
  bottom: 100%;
  left: 75px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.search-bar:after, .search-bar:before {
  bottom: 100%;
  right: 132px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.image-container {
  margin-top: 4rem;
}

.mega-menu--main:after {
  border-color: rgba(213, 209, 209, 0);
  border-bottom-color: #f5f5f5;
  border-width: 6px;
  margin-left: -10px;
}

.stories:after {
  border-color: rgba(213, 209, 209, 0);
  border-bottom-color: #f5f5f5;
  border-width: 6px;
  margin-left: -10px;
}

.account:after {
  border-color: rgba(213, 209, 209, 0);
  border-bottom-color: white;
  border-width: 6px;
  margin-left: -10px;
}

.search-bar:after {
  border-color: rgba(213, 209, 209, 0);
  border-bottom-color: #f5f5f5;
  border-width: 6px;
  margin-right: -10px;
}

.mega-menu--main:before {
  border-color: rgba(4, 5, 5, 0);
  border-bottom-color: #040505;
  border-width: 7px;
  margin-left: -11px;
}

.stories:before {
  border-color: rgba(4, 5, 5, 0);
  border-bottom-color: #040505;
  border-width: 7px;
  margin-left: -11px;
}

.account:before {
  border-color: rgba(4, 5, 5, 0);
  border-bottom-color: #040505;
  border-width: 7px;
  margin-left: -11px;
}

.search-bar:before {
  border-color: rgba(4, 5, 5, 0);
  border-bottom-color: #040505;
  border-width: 7px;
  margin-right: -11px;
}

.menu-icon {
  background-repeat: no-repeat;
  height: 26px;
  display: inline-block;
  position: relative;
  top: 5px;
  margin-right: 10%
}

.fit-guarantee {
  background-image: url('_icons/tick.jpg');
  width: 26px;
}

.arrows {
  background-image: url('_icons/arrows.png');
  width: 40px;
}

.packing-box {
  background-image: url('_icons/box.png');
  width: 31px;
}

.nav-menu .primary li.menu-item .menu-item--link:hover, .nav-menu .secondary li.menu-item .menu-item--link:hover {
  color: #355e6d;
}

li.shop {

  ul.story-links {
    list-style: none;
    padding: 2rem 1rem 2rem 2rem;

    li {
      margin-top: 0.5rem;
    }
  }

  .story-list {
    width: 100%;

    a{
      color: black;

      &:hover {
        color: #355e6d;
      }
    }
  }
}

.masthead {
  padding-top: 26px;
}

.nav-menu .primary li.menu-item .menu-item--link, .nav-menu .secondary li.menu-item .menu-item--link {
  padding-top: 24px;
}

.arrow-up {
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid #f4f4f4;
 }

.nav-menu {
   .search-btn {
     text-transform: none;
  }
}

.search-form {
  height: 240px;

  .input-group{
    margin-top: 90px;
  }
}

.search-bar button {
  margin-top: 6px;
  font-family: forum;
  font-size: 2rem;
  font-weight: 600;
}

.search-form .form-control {
  width: 85%;
}

.close-search {
  padding: 30px 37px 0 0;
}

.search-form {

  ::-webkit-input-placeholder { /* WebKit browsers */
    text-transform: none;
    padding-bottom: 0;
    margin-bottom: 0;
    bottom: 0;
    font-size: 1.5rem;
  }

  :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    text-transform: none;
    opacity:  1;
    font-size: 1.5rem;
  }

  ::-moz-placeholder { /* Mozilla Firefox 19+ */
    text-transform: none;
    opacity:  1;
    font-size: 1.5rem;
  }

  :-ms-input-placeholder { /* Internet Explorer 10+ */
    text-transform: none;
    font-size: 1.5rem;
    vertical-align: baseline
  }

  input {
    text-transform: none;
  }
}

.edit-title a {
  padding-top: 5px;

  &:hover{
    color: #355e6d;
  }
}

.masthead {
  @media(max-width: 480px) {
    padding-right: 0;
    padding-left: 0;
  }
}

.account-menu {
  width: 150px !important;
}

.account-btn {
  position: relative;
}

.account {
  background-color: white;
  width: 150px;

  ul {
    list-style: none;
    padding: 10px 0 0 0;

    li {
      padding-bottom: 2px;
      text-transform: none;
      padding-left: 20px;
      padding-right: 40px;

      &:last-child {
        background-color: #f5f5f5;
        background-image: url('_icons/login-icon.png');
        background-repeat: no-repeat;
        background-position: 130px center ;
        background-size: 16px 16px;
      }

      a {
        color: black;

        &:hover {
          color: #355e6d;
        }
      }
    }
  }
}

.nav-mobile-logo {
  height: 25px;
}

ul.secondary.pull-right {
  @media (max-width: 991px) {
    .visible-xs {
      display: inline-block !important;
    }
  }
}

/////////// mobile account menu //////////

@media (max-width: 991px) {
  .account-menu {
    width: 100% !important;
    position: fixed;
  }

  .account {
    position: relative;
    width: 100%;

    &:before {
      display: none;
    }

    &:after {
      display: none;
    }

    ul li a {
      font-size: 2rem;
    }
  }
}

li#cart-trigger {
  span#cart-item-count {
    @media (max-width: 480px) {
      color: white;
    }
    @media (max-width: 991px) {
      top: 0.7rem;
      left: -1.7rem;
      position: relative;
    }
  }
  a {
    @media (max-width: 320px) {
      padding-left: 3px;
      padding-right: 0px;
    }
    @media(min-width: 325px)and(max-width:400px){
      padding-left: 15px;
      padding-right: 5px;
    }
    @media(min-width: 400px)and(max-width:450px){
      padding-left: 20px;
      padding-right: 5px;
    }
  }
}

.hamburger {
  margin-top: -10px;
  border: none;
  background-color: white;
  button {
    border: none;
    background-color: white !important;
    img{
      width:30px;
      opacity: 0.7;
      margin-top: -15px;
      margin-left: -5px;
    }
  }
}

.mobile-logo{
  margin-top: -3px;

  //iphone 4,5
  @media(max-width: 320px){
    margin-left: 60px;
  }

  //iphone 6
  @media(min-width: 325px)and(max-width:380px){
    margin-left: 90px;
  }

  //iphone 6plus
  @media(min-width: 385px)and(max-width:420px){
    margin-left: 110px;
  }

  //nexus 7
  @media(min-width: 430px)and(max-width:610px){
    margin-left: 125px;
  }

}

#sideMenu {
  display: block;
  height: 100%;
  overflow: auto;
  position: fixed;
  left: -20em;
  font-size: 15px;
  top: 0;
  width: 20em;
  z-index: 2000;

  .open{
    -webkit-transition: all 5s;
  }

  .navbar-header {
    background-color: #e7e7e7;
    padding-top:7px;
    padding-bottom:7px;
    width:100%;
    .nav-brand {
      margin-left: 5px;

    }
  }
  nav{
    height:100%;
    ul{
      width:100%;
      li{
        margin-left: 20px;
        width:100%;
        clear:both;
        .dropdown-toggle{
          background-color: transparent;
          padding-top: 20px;
          padding-bottom: 20px;
          ul {
            width: 100%;
          }
        }
        .dropdown-menu{
          position: static;
          background-color: #f8f8f8;
        }
      }
    }
  }

  #close {
    font-size: 35px;
    float: right;
    margin-right: 10px;
    margin-top:-8px;
    img {
      width:30px;
      opacity: 0.7;
    }
  }

  .caret {
    float: right;
    margin-right: 10px;
  }

  .all-dresses{
    input {
      width: 265px;
      padding-top: 1px;
      padding-bottom: 1px;
      height: 40px;
      margin-top:20px;
    }
  }
  .account-login{
    padding-bottom: 20px;
    text-align: center;
    margin-top:20px;
    span{
      margin-left: 10px;
    }
    img{
      margin-top: -4px;
    }
  }

  a{
    color:black;
    font-weight: 500;
  }

  .arrow{
    img{
      width: 25px;
      height: 25px;
      transform: rotate(90deg);
      float: right;
      margin-right: 10px;
    }
    .clicked{
      transform: rotate(-90deg);
    }
  }
}

